# Ravencore

./: .gitignore  LICENSE  README.md  apps.json  changelog.md  compile.ps1  customize.sh  gamelist.txt  matches.txt  module.prop  overlay.apk  post-fs-data.sh  preview_pc.html  raven_engine.apk  service.sh  system.prop  toast.apk  uninstall.sh  update.json  v1_specs_planning.md  v2_specs_planning.md
.agents/: AGENTS.md
compile/lucapro_helper/: Cargo.toml
compile/lucapro_helper/src/: main.rs
compile/ravencore_helper/: Cargo.toml
compile/ravencore_helper/.cargo/: config.toml
compile/ravencore_helper/src/: main.rs
scripts/: profile.sh  utils.sh
webroot/: apps.json  index.html
